# SocketDjangoCHat

./: .gitignore  pyproject.toml
auth/: serializers.py
chat/management/commands/: broadcast.py
front_sample/chat-frontend/: package.json
front_sample/chat-frontend/src/: Chat.js
main/: settings.py  urls.py
