[tool.poetry]
name = "socketdjangochat"
version = "0.1.0"
description = ""
authors = ["Narashi Kuga <orenvady@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
djangorestframework = "^3.14.0"
djoser = "^2.2.0"
stream-chat = "^4.8.0"
django-cors-headers = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
